# DataGenFlow

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPERS.md  LICENSE  Makefile  README.md  README.zh-CN.md  TESTING.md  app.py  cli.py  config.py  debug_pipeline.py  example_seed.json  index.html  mock_llm.py  models.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
assets/: index-CavTGpsC.js  index-DOoj0F4O.js  index-DQuh3Jh4.js  index-DXheMS8w.js  index-DtUOXjZM.css  index-GE4WYQvR.css
docs/: DEVELOPERS.md  MARKDOWN_STYLE_GUIDE.md  conversational-ai-vertical.md  how_to_create_blocks.md  how_to_use.md  overview.md  research-algorithms.md  templates.md
frontend/: .eslintrc.json  .prettierignore  index.html  package.json  vite.config.ts
lib/: errors.py  generator.py  job_processor.py  job_queue.py  pipeline.py  schema_utils.py  storage.py  template_renderer.py  validator.py  workflow.py
tests/: conftest.py  test_adversarial_perturbation.py  test_api.py  test_api_blocks.py  test_back_translation.py  test_blocks_config.py  test_builtin_blocks_config.py  test_dialogue_generator.py  test_e2e_customer_service.py  test_error_handling.py  test_error_handling_api.py  test_errors.py  test_generator.py  test_integration.py  test_job_queue.py  test_metrics_calculator.py  test_models_config.py  test_persona_generator.py  test_pipeline_config_storage.py  test_pipeline_integration.py  test_pipeline_output.py  test_storage.py  test_storage_comprehensive.py  test_storage_pipelines.py  test_templates.py  test_workflow.py
ui/: index.html
website/: .gitignore  README.md  index.html  package.json  tailwind.config.js  (+2 more)
(+112 files in other folders)
