[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datagenflow"
version = "0.1.0"
description = "Q&A dataset generation and validation tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "litellm>=1.78.5",
    "rouge-score>=0.1.2",
]

[tool.setuptools.packages.find]
include = ["lib*"]
exclude = ["ui*", "data*"]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["no-untyped-def", "no-untyped-call", "var-annotated"]

[[tool.mypy.overrides]]
module = "lib.storage"
disable_error_code = ["no-any-return"]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests requiring external services (ollama, etc) - only run when explicitly called",
]
addopts = "-m 'not integration'"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
